--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <a class="navigation-link" aria-current="page" href="index.html">
-        <img src="#" alt="Логотип сайта Седона">
+        <img src="images/logo.svg" width="138" height="64" alt="Логотип города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -20,7 +20,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              О седоне
+              О Седоне
             </a>
           </li>
           <li class="navigation-item">
@@ -50,21 +50,23 @@
         </li>
       </ul>
     </header>
-    <main class="main-index">
-      <section class="hero">
+    <main class="main-index" data-test="main">
+      <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Сайт городка Седона</h1>
-        <img class="hero-img" src="#" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks">
+        <img class="hero-img" src="images/welcome.svg" width="458" height="352"
+          alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
       </section>
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">
           Преимущества
         </h2>
-        <p>Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="images/advantages-photo-1.jpg" width="800" height="385" alt="Вид на горы">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -81,6 +83,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="images/advantages-photo-2.jpg" width="800" height="385" alt="">
           </li>
         </ul>
       </section>
@@ -109,13 +112,13 @@
           </li>
         </ul>
       </section>
-      <section class="booking">
+      <section class="booking" data-test="search">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
         <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="booking-link" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
-      <section class="subscribe">
+      <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -127,7 +130,7 @@
         </form>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer" data-test="footer">
       <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social-list">
         <li class="social-item">
