--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
     <header class="page-header" data-test="header">
-      <a class="navigation-link" aria-current="page" href="index.html">
+      <a class="navigation-link" aria-current="page">
         <img src="images/logo.svg" width="138" height="64" alt="Логотип города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">
+            <a class="navigation-link navigation-link-current">
               Главная
             </a>
           </li>
@@ -53,22 +54,24 @@
     <main class="main-index" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Сайт городка Седона</h1>
-        <img class="hero-img" src="images/welcome.svg" width="458" height="352"
-          alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+        <figure>
+          <img class="hero-img" src="images/welcome.svg" width="458" height="352"
+            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+        </figure>
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">
           Преимущества
         </h2>
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item item-blue">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/advantages-photo-1.jpg" width="800" height="385" alt="Вид на горы">
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item item-light">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
@@ -76,27 +79,27 @@
             <h3 class="advantages-title">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item item-light">
             <h3 class="advantages-title">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item item-blue">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/advantages-photo-2.jpg" width="800" height="385" alt="">
+            <img src="images/advantages-photo-2.jpg" width="800" height="385" alt="Мост дьявола">
           </li>
         </ul>
       </section>
       <section class="services">
         <h2 class="visually-hidden">Сервис в Седоне</h2>
-        <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
-          <li class="services-item">
+          <li class="services-item item-light">
             <h3 class="services-title">
               Жильё
             </h3>
-            <p class="services-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="services-item">
             <h3 class="services-title">
@@ -104,7 +107,7 @@
             </h3>
             <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="services-item">
+          <li class="services-item item-light">
             <h3 class="services-title">
               Сувениры
             </h3>
@@ -114,7 +117,7 @@
       </section>
       <section class="booking" data-test="search">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
-        <p>Заинтересовались?</p>
+        <p class="booking-title">Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="booking-link" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
