Добавляет исправления в базовые стили

--- a/catalog.html
+++ b/catalog.html
@@ -41,29 +41,26 @@
         <li class=" user-navigation-item">
           <a class="user-navigation-link" href=" #">
             <span class="visually-hidden">В избранном</span>
-            <span>12</span>
+            <span class="number-of-favorite">12</span>
             <span>отелей</span>
           </a>
         </li>
-        <li class=" user-navigation-item">
-          <a class="user-navigation-link" href=" #">
-            Хочу сюда!
-          </a>
-        </li>
       </ul>
-
+      <a class="user-navigation-link navigation-button" href=" #">
+        Хочу сюда!
+      </a>
     </header>
     <main class="main-catalog" data-test="main">
       <header class="catalog-header">
         <h1 class="catalog-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs-list">
+        <ol class="breadcrumbs-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
           </li>
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" aria-current="page">Гостиницы</a>
           </li>
-        </ul>
+        </ol>
         <section class="catalog-products" data-test="filter">
           <h2 class="visually-hidden">Фильтр гостиниц</h2>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
@@ -247,7 +244,7 @@
         </ul>
       </section>
       <section class="subscribe catalog-subscribe" data-test="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <h2 class="catalog-subscribe-title">Подпишитесь на рассылку</h2>
         <p class="catallog-subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="subscribe--form-email"><label for="subscribe-email">Введите email</label>
