--- a/index.html
+++ b/index.html
@@ -40,16 +40,14 @@
         <li class=" user-navigation-item">
           <a class="user-navigation-link" href=" #">
             <span class="visually-hidden">В избранном</span>
-            <span>12</span>
+            <span class="number-of-favorite">12</span>
             <span>отелей</span>
           </a>
         </li>
-        <li class=" user-navigation-item">
-          <a class="user-navigation-link" href=" #">
-            Хочу сюда!
-          </a>
-        </li>
       </ul>
+      <a class="user-navigation-link navigation-button" href=" #">
+        Хочу сюда!
+      </a>
     </header>
     <main class="main-index" data-test="main">
       <section class="hero" data-test="hero">
@@ -67,24 +65,24 @@
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item item-blue">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h3 class="advantages-item-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/advantages-photo-1.jpg" width="800" height="385" alt="Вид на горы">
           </li>
           <li class="advantages-item item-light">
-            <h3 class="advantages-title">Небольшая площадь</h3>
+            <h3 class="advantages-item-title">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
+            <h3 class="advantages-item-title">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item item-light">
-            <h3 class="advantages-title">Мало туристов</h3>
+            <h3 class="advantages-item-title">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item item-blue">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <h3 class="advantages-item-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="images/advantages-photo-2.jpg" width="800" height="385" alt="Мост дьявола">
           </li>
@@ -96,19 +94,19 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
           <li class="services-item item-light">
-            <h3 class="services-title">
+            <h3 class=".services-item-title">
               Жильё
             </h3>
             <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="services-item">
-            <h3 class="services-title">
+            <h3 class=".services-item-title">
               Еда
             </h3>
             <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="services-item item-light">
-            <h3 class="services-title">
+            <h3 class=".services-item-title">
               Сувениры
             </h3>
             <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
