Исправляет базовую стилзацию

--- a/catalog.html
+++ b/catalog.html
@@ -248,7 +248,8 @@
         <p class="catallog-subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="subscribe--form-email"><label for="subscribe-email">Введите email</label>
-            <input type="email" name="subscribe-email" id="subscribe-email" placeholder="Ваш e-mail" required>
+            <input class="subscribe-email" type="email" name="subscribe-email" id="subscribe-email"
+              placeholder="Ваш e-mail" required>
             <button class="button" type="submit">Подписаться</button>
           </p>
         </form>
