--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="subscribe--form-email">
             <label for="subscribe-email">Укажите ваш email</label>
-            <input type="email" name="subscribe-email" id="subscribe-email" placeholder="Ваш e-mail" required>
+            <input class="subscribe-email" type="email" name="subscribe-email" id="subscribe-email"
+              placeholder="Ваш e-mail" required>
             <button class="button" type="submit">Подписаться</button>
           </p>
         </form>
